installed site-wrapper to all sites. header an nav is not longer part of main

--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -34,120 +34,122 @@
         </div>
     </nav>
 
-    <main>
-        <div id="legal-page-container" class="content">
-            <header id="header">
-                <div class="header__content content-wrapper">
-                    <h1 id="page-title">Kanban Project Management Tool</h1>
-                    <div id="info-container" class="info-container">
-                        <a href="./help.html">
-                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
-                        </a>
-                        <div class="header__user-info">
-                            <img src="../assets/img/user-ellipse.svg" alt="User picture">
-                            <span>SM</span>
-                        </div>
+    <nav aria-label="submenu" class="content-wrapper d-none"> 
+            <ul class="submenu ">
+            <li><a href="./legal-notice.html">Legal Notice</a></li>
+            <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="#">Log Out</a></li>
+        </ul>
+    </nav>
+
+    <div class="site-wrapper">
+        <header id="header">
+            <div class="header__content content-wrapper">
+                <h1 id="page-title">Kanban Project Management Tool</h1>
+                <div id="info-container" class="info-container">
+                    <a href="./help.html">
+                        <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                    </a>
+                    <div class="header__user-info">
+                        <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                        <span>SM</span>
                     </div>
                 </div>
-            </header>
+            </div>
+        </header>
 
-            <nav aria-label="submenu" class="content-wrapper d-none"> 
-                 <ul class="submenu ">
-                    <li><a href="./legal-notice.html">Legal Notice</a></li>
-                    <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-                    <li><a href="#">Log Out</a></li>
-                </ul>
-            </nav>
+        <main>
+            <div id="legal-page-container" class="content">
+                <section id="legal-content" class="legal-content content-wrapper">
+                    <h2>Legal Notice</h2>
+                    <div>
+                        <h3>Imprint</h3><br>
+                        <p><strong>Student Names:</strong> Sascha Keßler, Sebastian Hedwig, Marvin Lenhart</p>
+                        <p><strong>Address:</strong> Sebastian Hedwig</p>
+                        <p><strong>Postcode and City:</strong> 65439 Flörsheim am Main</p>
+                        <p><strong>Email:</strong> <a href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a></p>
+                        <br><br>
 
-            <section id="legal-content" class="legal-content content-wrapper">
-                <h2>Legal Notice</h2>
-                <div>
-                    <h3>Imprint</h3><br>
-                    <p><strong>Student Names:</strong> Sascha Keßler, Sebastian Hedwig, Marvin Lenhart</p>
-                    <p><strong>Address:</strong> Sebastian Hedwig</p>
-                    <p><strong>Postcode and City:</strong> 65439 Flörsheim am Main</p>
-                    <p><strong>Email:</strong> <a href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a></p>
-                    <br><br>
+                        <h4>Acceptance of Terms</h4>
+                        <p>
+                            By accessing and using Join (Product), you acknowledge and agree to the following terms and
+                            conditions,
+                            and any policies, guidelines, or amendments thereto that may be presented to you from time to
+                            time.
+                            We, the listed students, may update or change the terms and conditions from time to time without
+                            notice.
+                        </p>
+                        <br><br>
 
-                    <h4>Acceptance of Terms</h4>
-                    <p>
-                        By accessing and using Join (Product), you acknowledge and agree to the following terms and
-                        conditions,
-                        and any policies, guidelines, or amendments thereto that may be presented to you from time to
-                        time.
-                        We, the listed students, may update or change the terms and conditions from time to time without
-                        notice.
-                    </p>
-                    <br><br>
+                        <h4>Scope and Ownership of the Product</h4>
+                        <p>
+                            Join has been developed as part of a student group project in a web development bootcamp at the
+                            Developer Akademie GmbH.
+                            It has an educational purpose and is not intended for extensive personal &amp; business usage.
+                            As such, we cannot guarantee consistent availability, reliability, accuracy, or any other aspect
+                            of quality regarding this Product.
+                        </p>
+                        <br>
+                        <p>
+                            The design of Join is owned by the Developer Akademie GmbH. Unauthorized use, reproduction,
+                            modification, distribution,
+                            or replication of the design is strictly prohibited.
+                        </p>
+                        <br><br>
 
-                    <h4>Scope and Ownership of the Product</h4>
-                    <p>
-                        Join has been developed as part of a student group project in a web development bootcamp at the
-                        Developer Akademie GmbH.
-                        It has an educational purpose and is not intended for extensive personal &amp; business usage.
-                        As such, we cannot guarantee consistent availability, reliability, accuracy, or any other aspect
-                        of quality regarding this Product.
-                    </p>
-                    <br>
-                    <p>
-                        The design of Join is owned by the Developer Akademie GmbH. Unauthorized use, reproduction,
-                        modification, distribution,
-                        or replication of the design is strictly prohibited.
-                    </p>
-                    <br><br>
+                        <h4>Proprietary Rights</h4>
+                        <p>
+                            Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all
+                            proprietary
+                            rights in Join, including any associated copyrighted material, trademarks, and other proprietary
+                            information.
+                        </p>
+                        <br><br>
 
-                    <h4>Proprietary Rights</h4>
-                    <p>
-                        Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all
-                        proprietary
-                        rights in Join, including any associated copyrighted material, trademarks, and other proprietary
-                        information.
-                    </p>
-                    <br><br>
+                        <h4>Use of the Product</h4>
+                        <p>
+                            Join is intended to be used for lawful purposes only, in accordance with all applicable laws and
+                            regulations.
+                            Any use of Join for illegal activities, or to harass, harm, threaten, or intimidate another
+                            person, is strictly prohibited.
+                            You are solely responsible for your interactions with other users of Join.
+                        </p>
+                        <br><br>
 
-                    <h4>Use of the Product</h4>
-                    <p>
-                        Join is intended to be used for lawful purposes only, in accordance with all applicable laws and
-                        regulations.
-                        Any use of Join for illegal activities, or to harass, harm, threaten, or intimidate another
-                        person, is strictly prohibited.
-                        You are solely responsible for your interactions with other users of Join.
-                    </p>
-                    <br><br>
+                        <h4>Disclaimer of Warranties and Limitation of Liability</h4>
+                        <p>
+                            Join is provided "as is" without warranty of any kind, whether express or implied, including but
+                            not limited to the implied warranties
+                            of merchantability, fitness for a particular purpose, and non-infringement. In no event will we,
+                            the listed students,
+                            or the Developer Akademie, be liable for any direct, indirect, incidental, special,
+                            consequential or exemplary damages,
+                            including but not limited to, damages for loss of profits, goodwill, use, data, or other
+                            intangible losses,
+                            even if we have been advised of the possibility of such damages, arising out of or in connection
+                            with the use or performance of Join.
+                        </p>
+                        <br><br>
 
-                    <h4>Disclaimer of Warranties and Limitation of Liability</h4>
-                    <p>
-                        Join is provided "as is" without warranty of any kind, whether express or implied, including but
-                        not limited to the implied warranties
-                        of merchantability, fitness for a particular purpose, and non-infringement. In no event will we,
-                        the listed students,
-                        or the Developer Akademie, be liable for any direct, indirect, incidental, special,
-                        consequential or exemplary damages,
-                        including but not limited to, damages for loss of profits, goodwill, use, data, or other
-                        intangible losses,
-                        even if we have been advised of the possibility of such damages, arising out of or in connection
-                        with the use or performance of Join.
-                    </p>
-                    <br><br>
-
-                    <h4>Indemnity</h4>
-                    <p>
-                        You agree to indemnify, defend and hold harmless us, the listed students, the Developer
-                        Akademie, and our
-                        affiliates, partners, officers, directors, agents, and employees, from and against any claim,
-                        demand, loss,
-                        damage, cost, or liability (including reasonable legal fees) arising out of or relating to your
-                        use of Join
-                        and/or your breach of this Legal Notice.
-                    </p>
-                    <br><br>
-                    <p><strong>For any questions or notices, please contact us <a
-                                href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a>.</strong></p>
-                    <p><em>Date: July 26, 2023</em></p>
-                </div>
-            </section>
-        </div>
-    </main>
+                        <h4>Indemnity</h4>
+                        <p>
+                            You agree to indemnify, defend and hold harmless us, the listed students, the Developer
+                            Akademie, and our
+                            affiliates, partners, officers, directors, agents, and employees, from and against any claim,
+                            demand, loss,
+                            damage, cost, or liability (including reasonable legal fees) arising out of or relating to your
+                            use of Join
+                            and/or your breach of this Legal Notice.
+                        </p>
+                        <br><br>
+                        <p><strong>For any questions or notices, please contact us <a
+                                    href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a>.</strong></p>
+                        <p><em>Date: July 26, 2023</em></p>
+                    </div>
+                </section>
+            </div>
+        </main>
+    </div>
 </body>
 
 </html>
