--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -37,36 +37,38 @@
             </div>
         </nav>
 
-        <main>
-            <div id="contacts_page_container" class="content">
-                <header id="header">
-                    <div class="header__content content-wrapper">
-                        <h1 id="page-title">Kanban Project Management Tool</h1>
-                        <div id="info-container" class="info-container">
-                            <a href="./help.html">
-                                <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
-                            </a>
-                            <div class="header__user-info">
-                                <img src="../assets/img/user-ellipse.svg" alt="User picture">
-                                <span>SM</span>
-                            </div>
+        <nav aria-label="submenu" class="content-wrapper d-none"> 
+            <ul class="submenu ">
+                <li><a href="./legal-notice.html">Legal Notice</a></li>
+                <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="#">Log Out</a></li>
+            </ul>
+        </nav>
+        
+        <div class="site-wrapper">
+            <header id="header">
+                <div class="header__content content-wrapper">
+                    <h1 id="page-title">Kanban Project Management Tool</h1>
+                    <div id="info-container" class="info-container">
+                        <a href="./help.html">
+                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                        </a>
+                        <div class="header__user-info">
+                            <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                            <span>SM</span>
                         </div>
                     </div>
-                </header>
+                </div>
+            </header>
 
-                <nav aria-label="submenu" class="content-wrapper d-none"> 
-                    <ul class="submenu ">
-                        <li><a href="./legal-notice.html">Legal Notice</a></li>
-                        <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-                        <li><a href="#">Log Out</a></li>
-                    </ul>
-                </nav>
+            <main>
+                <div id="contacts_page_container" class="content">
+                    <section id="contacts_content">
 
-                <section id="contacts_content">
-
-                </section>
-            </div>
-        </main>
+                    </section>
+                </div>
+            </main>
+        </div>
 
         <script src="./script.js"></script>
         <script src="./scripts/login.js"></script>
