--- a/pages/help.html
+++ b/pages/help.html
@@ -32,141 +32,143 @@
         </div>
     </nav>
 
-    <main>
-        <div id="help-page-container" class="content">
-            <header id="header">
-                <div class="header__content content-wrapper">
-                    <h1 id="page-title">Kanban Project Management Tool</h1>
-                    <div id="info-container" class="info-container">
-                        <div class="header__user-info">
-                            <img src="../assets/img/user-ellipse.svg" alt="User picture">
-                            <span>SM</span>
-                        </div>
+    <nav aria-label="submenu" class="content-wrapper d-none"> 
+            <ul class="submenu ">
+            <li><a href="./legal-notice.html">Legal Notice</a></li>
+            <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="#">Log Out</a></li>
+        </ul>
+    </nav>
+
+    <div class="site-wrapper">
+        <header id="header">
+            <div class="header__content content-wrapper">
+                <h1 id="page-title">Kanban Project Management Tool</h1>
+                <div id="info-container" class="info-container">
+                    <div class="header__user-info">
+                        <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                        <span>SM</span>
                     </div>
                 </div>
-            </header>
+            </div>
+        </header>
 
-            <nav aria-label="submenu" class="content-wrapper d-none"> 
-                 <ul class="submenu ">
-                    <li><a href="./legal-notice.html">Legal Notice</a></li>
-                    <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-                    <li><a href="#">Log Out</a></li>
-                </ul>
-            </nav>
+        <main>
+            <div id="help-page-container" class="content">
+                <section id="help-content" class="help-content content-wrapper">
+                <div class="help-content_head-container">
+                    <h2>Help</h2>
+                    <img class="go-back-arrow" src="../assets/img/arrow-left-blue.svg" onclick="history.back()" alt="go back arrow">
+                </div> 
+                    <p>
+                        Welcome to the help page for <strong>Join</strong>, your guide to using our kanban project
+                        management tool.
+                        Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.
+                    </p>
 
-            <section id="help-content" class="help-content content-wrapper">
-              <div class="help-content_head-container">
-                <h2>Help</h2>
-                <img class="go-back-arrow" src="../assets/img/arrow-left-blue.svg" onclick="history.back()" alt="go back arrow">
-              </div> 
-                <p>
-                    Welcome to the help page for <strong>Join</strong>, your guide to using our kanban project
-                    management tool.
-                    Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.
-                </p>
+                    <h3>What is Join?</h3>
+                    <p>
+                        Join is a kanban-based project management tool designed and built by a group of dedicated students
+                        as part
+                        of their web development bootcamp at the <strong>Developer Akademie</strong>.
+                    </p>
 
-                <h3>What is Join?</h3>
-                <p>
-                    Join is a kanban-based project management tool designed and built by a group of dedicated students
-                    as part
-                    of their web development bootcamp at the <strong>Developer Akademie</strong>.
-                </p>
+                    <p>
+                        <em>Kanban</em>, a Japanese term meaning "billboard", is a highly effective method to visualize
+                        work,
+                        limit work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban
+                        to help users manage their tasks and projects in an intuitive, visual interface.
+                    </p>
 
-                <p>
-                    <em>Kanban</em>, a Japanese term meaning "billboard", is a highly effective method to visualize
-                    work,
-                    limit work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban
-                    to help users manage their tasks and projects in an intuitive, visual interface.
-                </p>
+                    <p>
+                        It is important to note that Join is designed as an educational exercise and is not intended for
+                        extensive business usage.
+                        While we strive to ensure the best possible user experience, we cannot guarantee consistent
+                        availability,
+                        reliability, accuracy, or other aspects of quality regarding Join.
+                    </p>
 
-                <p>
-                    It is important to note that Join is designed as an educational exercise and is not intended for
-                    extensive business usage.
-                    While we strive to ensure the best possible user experience, we cannot guarantee consistent
-                    availability,
-                    reliability, accuracy, or other aspects of quality regarding Join.
-                </p>
+                    <h3>How to use it</h3>
+                    <p>Here is a step-by-step guide on how to use Join:</p>
 
-                <h3>How to use it</h3>
-                <p>Here is a step-by-step guide on how to use Join:</p>
+                    <ol>
+                        <li>
+                            <div class="list-content">
+                                <h4>Exploring the Board</h4>
+                                <p>
+                                    When you log in to Join, you'll find a default board. This board represents your project
+                                    and contains four default lists:
+                                    <strong>"To Do"</strong>, <strong>"In Progress"</strong>, <strong>"Await
+                                        feedback"</strong> and <strong>"Done"</strong>.
+                                </p>
+                            </div>
+                        </li>
 
-                <ol>
-                    <li>
-                        <div class="list-content">
-                            <h4>Exploring the Board</h4>
-                            <p>
-                                When you log in to Join, you'll find a default board. This board represents your project
-                                and contains four default lists:
-                                <strong>"To Do"</strong>, <strong>"In Progress"</strong>, <strong>"Await
-                                    feedback"</strong> and <strong>"Done"</strong>.
-                            </p>
-                        </div>
-                    </li>
+                        <li>
+                            <div class="list-content">
+                                <h4>Creating Contacts</h4>
+                                <p>
+                                    In Join, you can add contacts to collaborate on your projects. Go to the
+                                    <strong>Contacts</strong> section,
+                                    click on <strong>"New Contact"</strong>, and fill in the required information. Once
+                                    added, these contacts can be assigned tasks
+                                    and they can interact with the tasks on the board.
+                                </p>
+                            </div>
+                        </li>
 
-                    <li>
-                        <div class="list-content">
-                            <h4>Creating Contacts</h4>
-                            <p>
-                                In Join, you can add contacts to collaborate on your projects. Go to the
-                                <strong>Contacts</strong> section,
-                                click on <strong>"New Contact"</strong>, and fill in the required information. Once
-                                added, these contacts can be assigned tasks
-                                and they can interact with the tasks on the board.
-                            </p>
-                        </div>
-                    </li>
+                        <li>
+                            <div class="list-content">
+                                <h4>Adding Cards</h4>
+                                <p>
+                                    Now that you've added your contacts, you can start adding cards. Cards represent
+                                    individual tasks.
+                                    Click the <strong>"+"</strong> button under the appropriate list to create a new card.
+                                    Fill in the task details in the card, like task name, description, due date, assignees,
+                                    etc.
+                                </p>
+                            </div>
+                        </li>
 
-                    <li>
-                        <div class="list-content">
-                            <h4>Adding Cards</h4>
-                            <p>
-                                Now that you've added your contacts, you can start adding cards. Cards represent
-                                individual tasks.
-                                Click the <strong>"+"</strong> button under the appropriate list to create a new card.
-                                Fill in the task details in the card, like task name, description, due date, assignees,
-                                etc.
-                            </p>
-                        </div>
-                    </li>
+                        <li>
+                            <div class="list-content">
+                                <h4>Moving Cards</h4>
+                                <p>
+                                    As the task moves from one stage to another, you can reflect that on the board by
+                                    <strong>dragging and dropping</strong> the card
+                                    from one list to another.
+                                </p>
+                            </div>
+                        </li>
 
-                    <li>
-                        <div class="list-content">
-                            <h4>Moving Cards</h4>
-                            <p>
-                                As the task moves from one stage to another, you can reflect that on the board by
-                                <strong>dragging and dropping</strong> the card
-                                from one list to another.
-                            </p>
-                        </div>
-                    </li>
+                        <li>
+                            <div class="list-content">
+                                <h4>Deleting Cards</h4>
+                                <p>
+                                    Once a task is completed, you can either move it to the "Done" list or delete it.
+                                    Deleting a card will <strong>permanently remove</strong> it from the board.
+                                    Please exercise caution when deleting cards, as <strong>this action is
+                                        irreversible</strong>.
+                                </p>
+                            </div>
+                        </li>
+                    </ol>
+                    <br>
+                    <p>
+                        Remember that using Join effectively requires consistent updates from you and your team
+                        to ensure the board reflects the current state of your project.
+                    </p>
+                    <p>
+                        Have more questions about Join? Feel free to contact us at
+                        <a href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a>.
+                        We're here to help you!
+                    </p>
 
-                    <li>
-                        <div class="list-content">
-                            <h4>Deleting Cards</h4>
-                            <p>
-                                Once a task is completed, you can either move it to the "Done" list or delete it.
-                                Deleting a card will <strong>permanently remove</strong> it from the board.
-                                Please exercise caution when deleting cards, as <strong>this action is
-                                    irreversible</strong>.
-                            </p>
-                        </div>
-                    </li>
-                </ol>
-                <br>
-                <p>
-                    Remember that using Join effectively requires consistent updates from you and your team
-                    to ensure the board reflects the current state of your project.
-                </p>
-                <p>
-                    Have more questions about Join? Feel free to contact us at
-                    <a href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a>.
-                    We're here to help you!
-                </p>
-
-                <h3>Enjoy using Join!</h3>
-            </section>
-        </div>
-    </main>
+                    <h3>Enjoy using Join!</h3>
+                </section>
+            </div>
+        </main>
+    </div>
 </body>
 
 </html>
