Add more colors to root Changed px to rem in various css files

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -47,7 +47,8 @@
                 </div>
 
                 <p class="useraccess-form__privacy-policy">
-                    <img src="../assets/img/checkbox-unchecked.svg" alt="icon of a checkbox">
+                    <input type="checkbox" id="check" />
+                    <label for="check"></label>
                     <span>I accept the <a href="/pages/privacy-policy.html">Privacy Policy</a>
                     </span>
                 </p>
