change button class at summary.html and add task.html

--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -110,10 +110,12 @@
                         <div class="task-content__footer content-wrapper">
                             <span class="required required--before"> This field is required</span>
                             <div class="task-content__footer-btn">
-                                <div class="task-content__footer-btn-clear">Clear 
+                                <div class="empty-btn">Clear 
                                     <img src="../assets/img/close.svg" alt="close icon">
                                 </div>
-                                <div class="task-content__footer-btn-create">Create Task <img src="../assets/img/done.svg" alt="done icon"></div>
+                                <div class="filled-btn">Create Task
+                                    <img src="../assets/img/done.svg" alt="done icon">
+                                </div>
                             </div>
                         </div>
                     </section>
