--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -45,7 +45,7 @@
     <div class="site-wrapper">
         <header id="header">
             <div class="header__content content-wrapper">
-                <h1 id="page-title">Kanban Project Management Tool</h1>
+                <span id="page-title">Kanban Project Management Tool</span>
                 <div id="info-container" class="info-container">
                     <a href="./help.html">
                         <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
@@ -61,16 +61,16 @@
         <main>
             <div id="legal-page-container" class="content">
                 <section id="legal-content" class="legal-content content-wrapper">
-                    <h2>Legal Notice</h2>
+                    <h1>Legal Notice</h1>
                     <div>
-                        <h3>Imprint</h3><br>
+                        <h2>Imprint</h2><br>
                         <p><strong>Student Names:</strong> Sascha Keßler, Sebastian Hedwig, Marvin Lenhart</p>
                         <p><strong>Address:</strong> Sebastian Hedwig</p>
                         <p><strong>Postcode and City:</strong> 65439 Flörsheim am Main</p>
                         <p><strong>Email:</strong> <a href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a></p>
                         <br><br>
 
-                        <h4>Acceptance of Terms</h4>
+                        <h3>Acceptance of Terms</h3>
                         <p>
                             By accessing and using Join (Product), you acknowledge and agree to the following terms and
                             conditions,
@@ -97,7 +97,7 @@
                         </p>
                         <br><br>
 
-                        <h4>Proprietary Rights</h4>
+                        <h3>Proprietary Rights</h3>
                         <p>
                             Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all
                             proprietary
@@ -116,7 +116,7 @@
                         </p>
                         <br><br>
 
-                        <h4>Disclaimer of Warranties and Limitation of Liability</h4>
+                        <h3>Disclaimer of Warranties and Limitation of Liability</h3>
                         <p>
                             Join is provided "as is" without warranty of any kind, whether express or implied, including but
                             not limited to the implied warranties
@@ -131,7 +131,7 @@
                         </p>
                         <br><br>
 
-                        <h4>Indemnity</h4>
+                        <h3>Indemnity</h3>
                         <p>
                             You agree to indemnify, defend and hold harmless us, the listed students, the Developer
                             Akademie, and our
