--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -46,7 +46,7 @@
     <div class="site-wrapper">
         <header id="header">
             <div class="header__content content-wrapper">
-                <h1 id="page-title">Kanban Project Management Tool</h1>
+                <span id="page-title">Kanban Project Management Tool</span>
                 <div id="info-container" class="info-container">
                     <a href="./help.html">
                         <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
@@ -62,33 +62,33 @@
         <main>
             <div id="data-privacy-page-container" class="content">
                 <section id="data-privacy-content" class="data-privacy-content content-wrapper">
-                    <h2>Privacy Policy</h2>
-                    <h3>1. Datenschutz auf einen Blick</h3>
-                    <h4>Allgemeine Hinweise</h4>
+                    <h1>Privacy Policy</h1>
+                    <h2>1. Datenschutz auf einen Blick</h2>
+                    <h3>Allgemeine Hinweise</h3>
                     <p>Die folgenden Hinweise geben einen einfachen &Uuml;berblick dar&uuml;ber, was mit Ihren
                         personenbezogenen Daten passiert, wenn Sie diese Website besuchen. Personenbezogene Daten sind alle
                         Daten, mit denen Sie pers&ouml;nlich identifiziert werden k&ouml;nnen. Ausf&uuml;hrliche
                         Informationen zum Thema Datenschutz entnehmen Sie unserer unter diesem Text aufgef&uuml;hrten
                         Datenschutzerkl&auml;rung.</p>
-                    <h4>Datenerfassung auf dieser Website</h4>
-                    <h5>Wer ist verantwortlich f&uuml;r die Datenerfassung auf dieser Website?</h5>
+                    <h3>Datenerfassung auf dieser Website</h3>
+                    <h4>Wer ist verantwortlich f&uuml;r die Datenerfassung auf dieser Website?</h4>
                     <p>Die Datenverarbeitung auf dieser Website erfolgt durch den Websitebetreiber. Dessen Kontaktdaten
                         k&ouml;nnen Sie dem Abschnitt &bdquo;Hinweis zur Verantwortlichen Stelle&ldquo; in dieser
                         Datenschutzerkl&auml;rung entnehmen.</p>
-                    <h5>Wie erfassen wir Ihre Daten?</h5>
+                    <h4>Wie erfassen wir Ihre Daten?</h4>
                     <p>Ihre Daten werden zum einen dadurch erhoben, dass Sie uns diese mitteilen. Hierbei kann es sich
                         z.&nbsp;B. um Daten handeln, die Sie in ein Kontaktformular eingeben.</p>
                     <p>Andere Daten werden automatisch oder nach Ihrer Einwilligung beim Besuch der Website durch unsere
                         IT-Systeme erfasst. Das sind vor allem technische Daten (z.&nbsp;B. Internetbrowser, Betriebssystem
                         oder Uhrzeit des Seitenaufrufs). Die Erfassung dieser Daten erfolgt automatisch, sobald Sie diese
                         Website betreten.</p>
-                    <h5>Wof&uuml;r nutzen wir Ihre Daten?</h5>
+                    <h4>Wof&uuml;r nutzen wir Ihre Daten?</h4>
                     <p>Ein Teil der Daten wird erhoben, um eine fehlerfreie Bereitstellung der Website zu
                         gew&auml;hrleisten. Andere Daten k&ouml;nnen zur Analyse Ihres Nutzerverhaltens verwendet werden.
                         Sofern &uuml;ber die Website Vertr&auml;ge geschlossen oder angebahnt werden k&ouml;nnen, werden die
                         &uuml;bermittelten Daten auch f&uuml;r Vertragsangebote, Bestellungen oder sonstige Auftragsanfragen
                         verarbeitet.</p>
-                    <h5>Welche Rechte haben Sie bez&uuml;glich Ihrer Daten?</h5>
+                    <h4>Welche Rechte haben Sie bez&uuml;glich Ihrer Daten?</h4>
                     <p>Sie haben jederzeit das Recht, unentgeltlich Auskunft &uuml;ber Herkunft, Empf&auml;nger und Zweck
                         Ihrer gespeicherten personenbezogenen Daten zu erhalten. Sie haben au&szlig;erdem ein Recht, die
                         Berichtigung oder L&ouml;schung dieser Daten zu verlangen. Wenn Sie eine Einwilligung zur
@@ -98,8 +98,8 @@
                         Ihnen ein Beschwerderecht bei der zust&auml;ndigen Aufsichtsbeh&ouml;rde zu.</p>
                     <p>Hierzu sowie zu weiteren Fragen zum Thema Datenschutz k&ouml;nnen Sie sich jederzeit an uns wenden.
                     </p>
-                    <h3>2. Allgemeine Hinweise und Pflicht&shy;informationen</h3>
-                    <h4>Datenschutz</h4>
+                    <h2>2. Allgemeine Hinweise und Pflicht&shy;informationen</h2>
+                    <h3>Datenschutz</h3>
                     <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer pers&ouml;nlichen Daten sehr ernst. Wir behandeln
                         Ihre personenbezogenen Daten vertraulich und entsprechend den gesetzlichen Datenschutzvorschriften
                         sowie dieser Datenschutzerkl&auml;rung.</p>
@@ -110,14 +110,14 @@
                     <p>Wir weisen darauf hin, dass die Daten&uuml;bertragung im Internet (z.&nbsp;B. bei der Kommunikation
                         per E-Mail) Sicherheitsl&uuml;cken aufweisen kann. Ein l&uuml;ckenloser Schutz der Daten vor dem
                         Zugriff durch Dritte ist nicht m&ouml;glich.</p>
-                    <h4>Hinweis zur verantwortlichen Stelle</h4>
+                    <h3>Hinweis zur verantwortlichen Stelle</h3>
                     <p>Die verantwortliche Stelle f&uuml;r die Datenverarbeitung auf dieser Website ist:</p>
                     <p>Sebastian Hedwig<br>Moselstra&szlig;e 3<br>6539 Fl&ouml;rsheim am Main</p>
                     <p>Telefon: 0151 23456789<br>E-Mail: sebastian.hedwig@web.de</p>
                     <p>Verantwortliche Stelle ist die nat&uuml;rliche oder juristische Person, die allein oder gemeinsam mit
                         anderen &uuml;ber die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.&nbsp;B.
                         Namen, E-Mail-Adressen o. &Auml;.) entscheidet.</p>
-                    <h4>Speicherdauer</h4>
+                    <h3>Speicherdauer</h3>
                     <p>Soweit innerhalb dieser Datenschutzerkl&auml;rung keine speziellere Speicherdauer genannt wurde,
                         verbleiben Ihre personenbezogenen Daten bei uns, bis der Zweck f&uuml;r die Datenverarbeitung
                         entf&auml;llt. Wenn Sie ein berechtigtes L&ouml;schersuchen geltend machen oder eine Einwilligung
@@ -125,7 +125,7 @@
                         rechtlich zul&auml;ssigen Gr&uuml;nde f&uuml;r die Speicherung Ihrer personenbezogenen Daten haben
                         (z.&nbsp;B. steuer- oder handelsrechtliche Aufbewahrungsfristen); im letztgenannten Fall erfolgt die
                         L&ouml;schung nach Fortfall dieser Gr&uuml;nde.</p>
-                    <h4>Allgemeine Hinweise zu den Rechtsgrundlagen der Datenverarbeitung auf dieser Website</h4>
+                    <h3>Allgemeine Hinweise zu den Rechtsgrundlagen der Datenverarbeitung auf dieser Website</h3>
                     <p>Sofern Sie in die Datenverarbeitung eingewilligt haben, verarbeiten wir Ihre personenbezogenen Daten
                         auf Grundlage von Art. 6 Abs. 1 lit. a DSGVO bzw. Art. 9 Abs. 2 lit. a DSGVO, sofern besondere
                         Datenkategorien nach Art. 9 Abs. 1 DSGVO verarbeitet werden. Im Falle einer ausdr&uuml;cklichen
@@ -141,7 +141,7 @@
                         unseres berechtigten Interesses nach Art. 6 Abs. 1 lit. f DSGVO erfolgen. &Uuml;ber die jeweils im
                         Einzelfall einschl&auml;gigen Rechtsgrundlagen wird in den folgenden Abs&auml;tzen dieser
                         Datenschutzerkl&auml;rung informiert.</p>
-                    <h4>Empf&auml;nger von personenbezogenen Daten</h4>
+                    <h3>Empf&auml;nger von personenbezogenen Daten</h3>
                     <p>Im Rahmen unserer Gesch&auml;ftst&auml;tigkeit arbeiten wir mit verschiedenen externen Stellen
                         zusammen. Dabei ist teilweise auch eine &Uuml;bermittlung von personenbezogenen Daten an diese
                         externen Stellen erforderlich. Wir geben personenbezogene Daten nur dann an externe Stellen weiter,
@@ -152,13 +152,13 @@
                         wir personenbezogene Daten unserer Kunden nur auf Grundlage eines g&uuml;ltigen Vertrags &uuml;ber
                         Auftragsverarbeitung weiter. Im Falle einer gemeinsamen Verarbeitung wird ein Vertrag &uuml;ber
                         gemeinsame Verarbeitung geschlossen.</p>
-                    <h4>Widerruf Ihrer Einwilligung zur Datenverarbeitung</h4>
+                    <h3>Widerruf Ihrer Einwilligung zur Datenverarbeitung</h3>
                     <p>Viele Datenverarbeitungsvorg&auml;nge sind nur mit Ihrer ausdr&uuml;cklichen Einwilligung
                         m&ouml;glich. Sie k&ouml;nnen eine bereits erteilte Einwilligung jederzeit widerrufen. Die
                         Rechtm&auml;&szlig;igkeit der bis zum Widerruf erfolgten Datenverarbeitung bleibt vom Widerruf
                         unber&uuml;hrt.</p>
-                    <h4>Widerspruchsrecht gegen die Datenerhebung in besonderen F&auml;llen sowie gegen Direktwerbung (Art.
-                        21 DSGVO)</h4>
+                    <h3>Widerspruchsrecht gegen die Datenerhebung in besonderen F&auml;llen sowie gegen Direktwerbung (Art.
+                        21 DSGVO)</h3>
                     <p>WENN DIE DATENVERARBEITUNG AUF GRUNDLAGE VON ART. 6 ABS. 1 LIT. E ODER F DSGVO ERFOLGT, HABEN SIE
                         JEDERZEIT DAS RECHT, AUS GR&Uuml;NDEN, DIE SICH AUS IHRER BESONDEREN SITUATION ERGEBEN, GEGEN DIE
                         VERARBEITUNG IHRER PERSONENBEZOGENEN DATEN WIDERSPRUCH EINZULEGEN; DIES GILT AUCH F&Uuml;R EIN AUF
@@ -175,24 +175,24 @@
                         DIREKTWERBUNG IN VERBINDUNG STEHT. WENN SIE WIDERSPRECHEN, WERDEN IHRE PERSONENBEZOGENEN DATEN
                         ANSCHLIESSEND NICHT MEHR ZUM ZWECKE DER DIREKTWERBUNG VERWENDET (WIDERSPRUCH NACH ART. 21 ABS. 2
                         DSGVO).</p>
-                    <h4>Beschwerde&shy;recht bei der zust&auml;ndigen Aufsichts&shy;beh&ouml;rde</h4>
+                    <h3>Beschwerde&shy;recht bei der zust&auml;ndigen Aufsichts&shy;beh&ouml;rde</h3>
                     <p>Im Falle von Verst&ouml;&szlig;en gegen die DSGVO steht den Betroffenen ein Beschwerderecht bei einer
                         Aufsichtsbeh&ouml;rde, insbesondere in dem Mitgliedstaat ihres gew&ouml;hnlichen Aufenthalts, ihres
                         Arbeitsplatzes oder des Orts des mutma&szlig;lichen Versto&szlig;es zu. Das Beschwerderecht besteht
                         unbeschadet anderweitiger verwaltungsrechtlicher oder gerichtlicher Rechtsbehelfe.</p>
-                    <h4>Recht auf Daten&shy;&uuml;bertrag&shy;barkeit</h4>
+                    <h3>Recht auf Daten&shy;&uuml;bertrag&shy;barkeit</h3>
                     <p>Sie haben das Recht, Daten, die wir auf Grundlage Ihrer Einwilligung oder in Erf&uuml;llung eines
                         Vertrags automatisiert verarbeiten, an sich oder an einen Dritten in einem g&auml;ngigen,
                         maschinenlesbaren Format aush&auml;ndigen zu lassen. Sofern Sie die direkte &Uuml;bertragung der
                         Daten an einen anderen Verantwortlichen verlangen, erfolgt dies nur, soweit es technisch machbar
                         ist.</p>
-                    <h4>Auskunft, Berichtigung und L&ouml;schung</h4>
+                    <h3>Auskunft, Berichtigung und L&ouml;schung</h3>
                     <p>Sie haben im Rahmen der geltenden gesetzlichen Bestimmungen jederzeit das Recht auf unentgeltliche
                         Auskunft &uuml;ber Ihre gespeicherten personenbezogenen Daten, deren Herkunft und Empf&auml;nger und
                         den Zweck der Datenverarbeitung und ggf. ein Recht auf Berichtigung oder L&ouml;schung dieser Daten.
                         Hierzu sowie zu weiteren Fragen zum Thema personenbezogene Daten k&ouml;nnen Sie sich jederzeit an
                         uns wenden.</p>
-                    <h4>Recht auf Einschr&auml;nkung der Verarbeitung</h4>
+                    <h3>Recht auf Einschr&auml;nkung der Verarbeitung</h3>
                     <p>Sie haben das Recht, die Einschr&auml;nkung der Verarbeitung Ihrer personenbezogenen Daten zu
                         verlangen. Hierzu k&ouml;nnen Sie sich jederzeit an uns wenden. Das Recht auf Einschr&auml;nkung der
                         Verarbeitung besteht in folgenden F&auml;llen:</p>
