--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -42,7 +42,7 @@
         <div class="site-wrapper">
             <header id="header">
                 <div class="header__content content-wrapper">
-                    <h1 id="page-title">Kanban Project Management Tool</h1>
+                    <span id="page-title">Kanban Project Management Tool</span>
                     <div id="info-container" class="info-container">
                         <a href="./help.html">
                             <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
@@ -59,7 +59,7 @@
                 <div class="content">
                     <section id="task-content">
                         <div class="task-content__header content-wrapper">
-                            <h2>Add Task</h2>
+                            <h1>Add Task</h1>
                         </div>
                         <div class="task-content__container content-wrapper">
                             <div class="add-task__left-column">
