--- a/pages/board.html
+++ b/pages/board.html
@@ -51,7 +51,7 @@
         <div class="site-wrapper">
             <header id="header">
                 <div class="header__content content-wrapper">
-                    <h1 id="page-title">Kanban Project Management Tool</h1>
+                    <span id="page-title">Kanban Project Management Tool</span>
                     <div id="info-container" class="info-container">
                         <a href="./help.html">
                             <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
@@ -68,7 +68,7 @@
                 <div id="board-page-content" class="content">
                     <section id="board" class="board-content content-wrapper">
                         <div id="board-head" class="board__head">
-                            <h2>Board</h2>
+                            <h1>Board</h1>
                             <div class="task-search-and-add">
                                 <div class="board__head__searchbox">
                                     <input type="search" placeholder="Find Task">
@@ -83,7 +83,7 @@
                         <div id="board-table" class="board__table">
                             <div id=to-do-container class="board__table__column">
                                 <span>
-                                    <h3>To do</h3>
+                                    <h2>To do</h2>
                                     <img src="../assets/img/add-btn-border.svg" alt="add task to 'to do'">
                                 </span>
                                 <div id="to-do-tasks" class="tasks">
@@ -93,7 +93,7 @@
 
                             <div id="in-progress-container" class="board__table__column">
                                 <span>
-                                    <h3>In Progress</h3>
+                                    <h2>In Progress</h2>
                                     <img src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'">
                                 </span>
                                 <div id="in-progress-tasks" class="tasks">
@@ -125,7 +125,7 @@
                             </div>
 
                             <div id="await-feedback-container" class="board__table__column">
-                                <span><h3>Await Feedback</h3> 
+                                <span><h2>Await Feedback</h2> 
                                     <img src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'">
                                 </span>
                                 <div id="await-feedback-tasks" class="tasks"> 
@@ -135,7 +135,7 @@
                             </div>
 
                             <div id="done-container" class="board__table__column">
-                                <h3>Done</h3>
+                                <h2>Done</h2>
                                 <div id="done-tasks" class="tasks">
                                     <div class="task">Task D</div>
                                     <div class="task">Task E</div>
