--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -48,7 +48,7 @@
         <div class="site-wrapper">
             <header id="header">
                 <div class="header__content content-wrapper">
-                    <h1 id="page-title">Kanban Project Management Tool</h1>
+                    <span id="page-title">Kanban Project Management Tool</span>
                     <div id="info-container" class="info-container">
                         <a href="./help.html">
                             <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
