--- a/pages/help.html
+++ b/pages/help.html
@@ -43,7 +43,7 @@
     <div class="site-wrapper">
         <header id="header">
             <div class="header__content content-wrapper">
-                <h1 id="page-title">Kanban Project Management Tool</h1>
+                <span id="page-title">Kanban Project Management Tool</span>
                 <div id="info-container" class="info-container">
                     <div class="header__user-info">
                         <img src="../assets/img/user-ellipse.svg" alt="User picture">
@@ -57,7 +57,7 @@
             <div id="help-page-container" class="content">
                 <section id="help-content" class="help-content content-wrapper">
                 <div class="help-content_head-container">
-                    <h2>Help</h2>
+                    <h1>Help</h1>
                     <img class="go-back-arrow" src="../assets/img/arrow-left-blue.svg" onclick="history.back()" alt="go back arrow">
                 </div> 
                     <p>
@@ -66,7 +66,7 @@
                         Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.
                     </p>
 
-                    <h3>What is Join?</h3>
+                    <h2>What is Join?</h2>
                     <p>
                         Join is a kanban-based project management tool designed and built by a group of dedicated students
                         as part
@@ -88,7 +88,7 @@
                         reliability, accuracy, or other aspects of quality regarding Join.
                     </p>
 
-                    <h3>How to use it</h3>
+                    <h2>How to use it</h2>
                     <p>Here is a step-by-step guide on how to use Join:</p>
 
                     <ol>
@@ -106,7 +106,7 @@
 
                         <li>
                             <div class="list-content">
-                                <h4>Creating Contacts</h4>
+                                <h3>Creating Contacts</h3>
                                 <p>
                                     In Join, you can add contacts to collaborate on your projects. Go to the
                                     <strong>Contacts</strong> section,
@@ -119,7 +119,7 @@
 
                         <li>
                             <div class="list-content">
-                                <h4>Adding Cards</h4>
+                                <h3>Adding Cards</h3>
                                 <p>
                                     Now that you've added your contacts, you can start adding cards. Cards represent
                                     individual tasks.
@@ -132,7 +132,7 @@
 
                         <li>
                             <div class="list-content">
-                                <h4>Moving Cards</h4>
+                                <h3>Moving Cards</h3>
                                 <p>
                                     As the task moves from one stage to another, you can reflect that on the board by
                                     <strong>dragging and dropping</strong> the card
@@ -143,7 +143,7 @@
 
                         <li>
                             <div class="list-content">
-                                <h4>Deleting Cards</h4>
+                                <h3>Deleting Cards</h3>
                                 <p>
                                     Once a task is completed, you can either move it to the "Done" list or delete it.
                                     Deleting a card will <strong>permanently remove</strong> it from the board.
@@ -164,7 +164,7 @@
                         We're here to help you!
                     </p>
 
-                    <h3>Enjoy using Join!</h3>
+                    <h4>Enjoy using Join!</h4>
                 </section>
             </div>
         </main>
