--- a/pages/summary.html
+++ b/pages/summary.html
@@ -46,7 +46,7 @@
     <div class="site-wrapper">
         <header id="header">
             <div class="header__content content-wrapper">
-                <h1 id="page-title">Kanban Project Management Tool</h1>
+                <span id="page-title">Kanban Project Management Tool</span>
                 <div id="info-container" class="info-container">
                     <a href="./help.html">
                     <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
@@ -63,29 +63,29 @@
             <div id="summary-page-container" class="content">
                 <section id="summary-content">
                     <div class="summary-content__header content-wrapper">
-                        <h2>Join 360</h2>
+                        <h1>Join 360</h1>
                         <div class="blue_seperator"></div>
                         <span>Key Metrics at a Glance</span>
                     </div>
                     <!--Summary Content will be loaded here dynamically-->
                     <div class="summary-content__metrics content-wrapper">
                         <div class="summary-content__left">
-                            <div class="summary-content__metrics--row">
+                            <div class="summary-content__metrics-row">
 
                                 <a href="./board.html"
-                                    class="metrics__box metrics__box--top metrics__icon--todo">
+                                    class="metrics__box metrics__box-top metrics__icon-todo">
                                     <img class="" src="../assets/img/to-do.svg" alt="To-do Image">
-                                    <div class="metrics__box--text">
+                                    <div class="metrics__box-text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">To-do</span>
                                     </div>
                                 </a>
 
                                 <a href="./board.html"
-                                    class="metrics__box metrics__box--top
-                                    metrics__icon--done">
+                                    class="metrics__box metrics__box-top
+                                    metrics__icon-done">
                                     <img src="../assets/img/done.png" alt="To-do Image">
-                                    <div class="metrics__box--text">
+                                    <div class="metrics__box-text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">Done</span>
                                     </div>
@@ -93,39 +93,39 @@
 
                             </div>
 
-                            <div class="summary-content__metrics--row">
+                            <div class="summary-content__metrics-row">
 
-                                <a href="./board.html" class="metrics__box metrics__box--middle">
-                                    <div class="metrics__box--left">
+                                <a href="./board.html" class="metrics__box metrics__box-middle">
+                                    <div class="metrics__box-left">
                                         <img src="../assets/img/urgent-summary.png" alt="To-do Image">
-                                        <div class="metrics__box--text">
+                                        <div class="metrics__box-text">
                                             <span class="metric-number">1</span>
                                             <span class="metric-txt-middle">Urgent</span>
                                         </div>
                                     </div>
                                     <div class="grey_seperator"></div>
-                                    <div class="metrics__box--text">
+                                    <div class="metrics__box-text">
                                         <span>Date</span>
                                         <span>Upcoming Deadline</span>
                                     </div>
                                 </a>
                             </div>
 
-                            <div class="summary-content__metrics--row">
-                                <a href="./board.html" class="metrics__box metrics__box--bottom">
-                                    <div class="metrics__box--text">
+                            <div class="summary-content__metrics-row">
+                                <a href="./board.html" class="metrics__box metrics__box-bottom">
+                                    <div class="metrics__box-text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">Tasks In <br>Board</span>
                                     </div>
                                 </a>
-                                <a href="./board.html" class="metrics__box metrics__box--bottom">
-                                    <div class="metrics__box--text">
+                                <a href="./board.html" class="metrics__box metrics__box-bottom">
+                                    <div class="metrics__box-text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">Tasks In <br>Progress</span>
                                     </div>
                                 </a>
-                                <a href="./board.html" class="metrics__box metrics__box--bottom">
-                                    <div class="metrics__box--text">
+                                <a href="./board.html" class="metrics__box metrics__box-bottom">
+                                    <div class="metrics__box-text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">Awaiting <br>Feedback</span>
                                     </div>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="summary-content__right">
-                            <h4>Good morning!</h4>
+                            <h3>Good morning!</h3>
                             <span>Hier Name (nur wenn Eingeloggt, sonst leer)</span> <!--Soll je nach Tageszeit wechseln-->
                         </div>
                     </div>    
