--- a/pages/board.html
+++ b/pages/board.html
@@ -84,7 +84,7 @@
                             <div id=to-do-container class="board__table__column">
                                 <span>
                                     <h3>To do</h3>
-                                    <img src="../assets/img/add-btn-border.svg" alt="add task to 'to do'">
+                                    <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'to do'">
                                 </span>
                                 <div id="to-do-tasks" class="tasks">
                                     <div class="no-tasks-placeholder">No active tasks</div>
@@ -94,7 +94,7 @@
                             <div id="in-progress-container" class="board__table__column">
                                 <span>
                                     <h3>In Progress</h3>
-                                    <img src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'">
+                                    <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'">
                                 </span>
                                 <div id="in-progress-tasks" class="tasks">
 
@@ -111,10 +111,12 @@
                                         </div>
                                         <div class="task_assignment-and-priority-box">
                                             <div class="task_assignments">
-                                                <img id="${user.id}" src="#" alt="member initials">
-                                                <img id="${user.id}" src="#" alt="member initials">
-                                                <img id="${user.id}" src="#" alt="member initials">
-                                                <img id="priority" class="task_priority" src="../assets/img/priority-medium.svg" alt="">
+                                                <img class="user-img" id="${user.id}" src="#" alt="User Image or initials">
+                                                <img class="user-img" id="${user.id}" src="#" alt="User Image or initials">
+                                                <img class="user-img" id="${user.id}" src="#" alt="User Imare or initials">
+                                            </div>
+                                            <div class="task_priority">
+                                                <img class="user-img" id="priority" class="task_priority" src="../assets/img/priority-medium.svg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -126,7 +128,7 @@
 
                             <div id="await-feedback-container" class="board__table__column">
                                 <span><h3>Await Feedback</h3> 
-                                    <img src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'">
+                                    <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'">
                                 </span>
                                 <div id="await-feedback-tasks" class="tasks"> 
                                     <div class="task">Task B</div>
